--- a/css/main.scss
+++ b/css/main.scss
@@ -58,3 +58,10 @@ img.fading:hover {
 
 //Mein Zeuch
 
+pre,
+code {
+    font-size: 15px;
+    border: 1px solid $grey-color-light;
+    border-radius: 3px;
+    background: #222A30 !important;
+}
